--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
     background-color: black;
+    padding:0;
+    margin:0;
 }
 
 .col-10 {
@@ -11,14 +13,16 @@ body {
     position: relative;
     text-align: center;
     height: 100vh;
+
 }
 
 #opening img {
-    width: 100%;
-    position: relative;
+    height: 100vh;
     animation: fadeIn2;
     animation-duration: 5s;
     animation-fill-mode: forwards;
+    
+    
     
 }
 
@@ -33,8 +37,10 @@ body {
 
 }
 
+
+
 #opening h1{
-    top: 35%;
+    top: 30%;
     left: 50%;
     position: absolute;
     transform: translateX(-50%) translateY(-50%);
@@ -99,10 +105,11 @@ body {
     }
 
     50% {
-        transform: translateY(-20%);
+        transform: translateY(-50%);
     }
 
     100% {
         transform: translateY(0%);
     }
 }
+
