--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin:0;
 }
 
-.col-10 {
+.col-12 {
     border: maroon 3px solid;
     height: 100vh;
 }
@@ -17,13 +17,12 @@ body {
 }
 
 #opening img {
-    height: 100vh;
     animation: fadeIn2;
     animation-duration: 5s;
     animation-fill-mode: forwards;
-    
-    
-    
+    object-fit: cover;
+    height: 100vh;
+    width: 100vw;
 }
 
 #opening i {
