--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,14 @@ body {
     height: 100vh;
 }
 
-#opening {
+.opening {
     position: relative;
     text-align: center;
     height: 100vh;
 
 }
 
-#opening img {
+.opening img {
     animation: fadeIn2;
     animation-duration: 8s;
     animation-fill-mode: forwards;
@@ -29,7 +29,7 @@ body {
     width: 100vw;
 }
 
-#opening i {
+.opening i {
     color:#FDBB30;
     position: absolute;
     top:80%;
@@ -42,7 +42,7 @@ body {
 
 
 
-#opening #always{
+.opening .para1{
     top: 20%;
     left: 50%;
     position: absolute;
@@ -54,7 +54,7 @@ body {
     font-family: 'Bebas Neue' ;
 }
 
-#opening #believe{
+.opening .para2{
     top: 35%;
     left: 50%;
     position: absolute;
@@ -67,7 +67,7 @@ body {
     font-size: 80px;
 }
 
-#opening p {
+.opening p {
     color: white;
     animation: fadeIn2;
     animation-duration: 8s;
@@ -131,4 +131,33 @@ body {
         transform: translateY(0%);
     }
 }
+#chapt0 {
+    position: relative;
+}
 
+#chapt0 img {
+    object-fit: cover;
+    height: 100vh;
+    width: 100vw;
+    
+
+}
+
+#chapt0 #on-day {
+    color:white;
+    position: absolute;
+    right: auto;
+    left: auto;
+    top: -10px;
+    text-align: center;
+    padding: 20px;
+}
+
+#chapt0 #drought {
+    color:white;
+    position: absolute;
+    right: auto;
+    left: auto;
+    text-align: center;
+    padding: 20px;
+}
