--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     margin:0;
 }
 
+p {
+    font-family: 'PT Sans' ;
+}
+
 .col-12 {
     border: #860038 3px solid;
     height: 100vh;
@@ -139,25 +143,49 @@ body {
     object-fit: cover;
     height: 100vh;
     width: 100vw;
-    
-
+    overflow: hidden;
 }
+
+
 
 #chapt0 #on-day {
     color:white;
     position: absolute;
-    right: auto;
-    left: auto;
-    top: -10px;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    padding: 20px;
+    margin-bottom: 30px;
+
+    
 }
 
 #chapt0 #drought {
     color:white;
     position: absolute;
-    right: auto;
-    left: auto;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     padding: 20px;
+    
+    
 }
+
+#chapt0 i {
+    color:#FDBB30;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top:80%;
+    text-align: center;
+    animation: fadeIn2, bounce;
+    animation-duration: 12s, 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1, infinite;
+    font-size: 30px;
+}
+
+
+
