--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: #FDBB30;
+    background-color: black;
     padding:0;
     margin:0;
 }
@@ -333,4 +333,12 @@ section > div {
     -5px -5px 10px rgba(255,255,255,0.5);
     border: 1px solid rgba(255,255,255, 0.2);
 
+}
+
+#failures img {
+    width: 100%;
+}
+
+#failures p {
+    font-family: 'PT Sans' ;
 }
