--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ section > div {
     overflow: hidden;
 }
 
-#chapt0 #on-day {
+#chapt0 #c01 {
     color:white;
     position: absolute;
     top: 15%;
@@ -149,7 +149,7 @@ section > div {
     
 }
 
-#chapt0 #drought {
+#chapt0 #c02 {
     color:white;
     position: absolute;
     top: 40%;
@@ -159,7 +159,7 @@ section > div {
     font-family: 'PT Sans' ;
 }
 
-#yrs {
+#c03 {
     color:white;
     position: absolute;
     top: 65%;
@@ -167,7 +167,6 @@ section > div {
     transform: translate(-50%, -50%);
     text-align: center;
     font-family: 'Bebas Neue';
-    display: none;
 }
 
 #chapt0 i {
@@ -184,15 +183,11 @@ section > div {
     font-size: 30px;
 }
 
-#chapt0 p{
+#chapt0 p, #c03{
     display: none;
 }
 
-#chapt0:hover p {
-    display: block;
-}
-
-#chapt0:hover #yrs {
+#chapt0:hover #c03, #chapt0:hover p  {
     display: block;
 }
 
@@ -300,7 +295,7 @@ section > div {
 
 }
 
-#chapt1 i, #chapt1b i {
+#chapt1 i, #chapt1b i, #chapt2 i {
     color:#FDBB30;
     position: absolute;
     left: 50%;
@@ -352,4 +347,36 @@ section > div {
 #nar6 {
     top: 30%;
     left: 5%;
+}
+
+/* chapt2 css */
+
+#chapt2 {
+    height: 100vh;
+    color:white;
+}
+
+#villain {
+    width:100vw;
+    height: 100vh;
+}
+
+#villain img {
+    height:40vh;
+    object-fit: cover;
+    position: absolute;
+    transform: translateX(-50%);
+    left:50%;
+    top:12%;
+}
+
+#villain h1 {
+    font-family: 'Bebas Neue' ;
+    text-align: center;
+    font-size: 20vh;
+    letter-spacing: 10px;
+}
+
+#chapt2 .col-12 {
+    border: 1px gold solid;
 }
