--- a/styles.css
+++ b/styles.css
@@ -288,24 +288,8 @@ section > div {
     letter-spacing: 10px;
 }
 
-@media (min-width:400px) {
-    #villain h1 {
-        font-size: 20vh;
-    }
-
-    #c21 {
-    top: 42%;
-    left:5%;
-    text-align: left;
-    
-    }
-}
-
-
-
-
 #chapt2 .col-12 {
-    border: 1px gold solid;
+    /* border: 1px gold solid; */
 }
 
 #c21 {
@@ -316,7 +300,7 @@ section > div {
 }
 
 #c22 {
-    top:57%;
+    top:60%;
     text-align: right;
     font-size: 14px ;
 }
@@ -327,15 +311,28 @@ section > div {
     color: white;
 }
 
+@media (min-width:400px) {
+    #villain h1 {
+        font-size: 20vh;
+    }
 
+    #villain img{
+        height: 45vh;
+    }
+
+}
 
 @media (min-width:570px) {
     #villain h1 {
         font-size: 30vh;
     }
 
+    #villain img{
+        height: 50vh;
+    }
+
     #c21, #c22 {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 
@@ -344,8 +341,12 @@ section > div {
         font-size: 40vh;
     }
 
+    #villain img{
+        height: 55vh;
+    }
+
     #c21, #c22 {
-        font-size: 25px;
+        font-size: 20px;
     }
 }
 
@@ -354,17 +355,26 @@ section > div {
         font-size: 50vh;
     }
 
+    #villain img{
+        height: 60vh;
+    }
+
     #c21, #c22 {
-        font-size: 30px;
+        font-size: 25px;
     }
 }
 
+    #c21, #c22, #villain {
+        display: none;
+    }
+
+/* -------------------------------chapt2.5 css --------------------------------*/    
 
 /* -------------------------------general css --------------------------------*/
 
 #chapt1b:hover #c14, #chapt1b:hover #c15, #chapt1b:hover #c16, #chapt1b:hover img, 
 #draftday:hover #pickquote, #draftday:hover #c11, #draftday:hover #c12, #draftday:hover #c13,
-#draftday:hover img {
+#draftday:hover img, #chapt2:hover #c21, #chapt2:hover #c22, #chapt2:hover #villain {
     display: block;
 }
 
