--- a/styles.css
+++ b/styles.css
@@ -381,32 +381,58 @@ section > div {
 }
 
 /* -------------------------------chapt3 css --------------------------------*/
+#chapt3 {
+    height: 100vh;
+}
 
-#c31, #c32 p, #c33 p{
+#chapt3 p {
     color: white;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,1);
     font-weight: bold;
-    position: absolute;
     font-family: 'PT Sans' ;
 }
 
-#c32 {
-    height: 50vh;
+#chapt3 h1 {
+    color: white;
+    background-color: rgba(0,0,0,1);
+    font-family: 'Bebas Neue';
 }
 
 #chapt3 img {
-    position: absolute;
-    width: 100%;
     object-fit: cover;
-    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display:none;
 }
+
+#c31, #c32, #c33 {
+    text-align: center;
+    display:none;
+    position: absolute;
+}
+
+#c31 {
+    top:40%;
+}
+
+#c32 {
+    top:30%;
+}
+
+#c33 {
+    top:50%;
+}
+
+
 
 /* -------------------------------general css --------------------------------*/
 
 #chapt1b:hover #c14, #chapt1b:hover #c15, #chapt1b:hover #c16, #chapt1b:hover img, 
 #draftday:hover #pickquote, #draftday:hover #c11, #draftday:hover #c12, #draftday:hover #c13,
 #draftday:hover img, #chapt2:hover #c21, #chapt2:hover #c22, #chapt2:hover #villain, 
-#chapt2b:hover #c23, #chapt2b:hover #c24, #chapt2b:hover #c25{
+#chapt2b:hover #c23, #chapt2b:hover #c24, #chapt2b:hover #c25, #chapt3:hover #c31, 
+#chapt3:hover #c32, #chapt3:hover #c33, #chapt3:hover img{
     display: block;
 }
 
@@ -440,6 +466,12 @@ section > div {
     font-size: 30px;
 }
 
+.fadeIn0 {
+    animation: fadeIn;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
 .fadeIn1 {
     animation: fadeIn;
     animation-duration: 3s;
@@ -460,9 +492,23 @@ section > div {
 
 .fadeIn4 {
     animation: fadeIn2;
-    animation-duration: 12s;
+    animation-duration: 15s;
     animation-fill-mode: forwards;
 }
+
+.fadeIn5 {
+    animation: fadeIn2;
+    animation-duration: 22s;
+    animation-fill-mode: forwards;
+}
+
+.fadeIn6 {
+    animation: fadeIn2;
+    animation-duration: 30s;
+    animation-fill-mode: forwards;
+}
+
+
 
 .bounce {
     animation: bounce;
