--- a/styles.css
+++ b/styles.css
@@ -435,8 +435,6 @@ section > div {
     text-align: center;
 }
 
-
-
 #c41 {
     top: 5%;
     position: absolute;
@@ -472,7 +470,7 @@ section > div {
     max-height: 130px;
 }
 
-
+/* -------------------------------chapt4b css --------------------------------*/
 
 
 
