added-cont-chapt4b

--- a/animations.css
+++ b/animations.css
@@ -1,5 +1,5 @@
 
-#chapt1 i, #chapt1b i, #chapt2 i, #chapt2b i, #chapt3 i, #chapt4 i{
+#chapt1 i, #chapt1b i, #chapt2 i, #chapt2b i, #chapt3 i, #chapt4 i, #chapt4b i{
     color:#FDBB30;
     position: absolute;
     left: 50%;
